@@ -780,13 +780,17 @@ class Process(object):
     def wait(self, timeout=None):
         """Wait for process to terminate and, if process is a children
         of the current one also return its exit code, else None.
-        It also makes sure this process PID has not been reused by
-        another process. If that's the case returns immediately.
+        On UNIX it first makes sure this process PID has not been reused by
+        another process in which case returns immediately.
         """
-        if self.is_running():
-            if timeout is not None and not timeout >= 0:
-                raise ValueError("timeout must be a positive integer")
-            return self._platform_impl.process_wait(timeout)
+        if timeout is not None and not timeout >= 0:
+            raise ValueError("timeout must be a positive integer")
+        # cannot check PID reuse on Windows as we're able to determine
+        # exit code also from a dead process
+        if os.name == 'posix':
+            if not self.is_running():
+                return
+        return self._platform_impl.process_wait(timeout)
 
     # --- deprecated API
 
